Duplicate detection when browsing